--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="./src/assets/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta charset="UTF-8" />
+    <link rel="icon" href="./src/assets/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
+    <meta
+      name="description"
+      content="Renova Energie bietet innovative Ladestationen für Elektrofahrzeuge und effiziente Solar-Panels für erneuerbare Energien an. Erleben Sie nachhaltige Energie-Lösungen von Experten."
+    />
+    <meta
+      name="keywords"
+      content="Renova Energie, Ladestationen, Elektrofahrzeuge, Solar-Panels, erneuerbare Energien, nachhaltige Energie, Energie-Lösungen"
+    />
+    <meta name="author" content="Renova Energie" />
+
     <title>Renova Energie</title>
   </head>
   <body>
